--- a/word-relay.html
+++ b/word-relay.html
@@ -11,27 +11,31 @@
   <div>제시어: <span id="word"></span></div>
   <input type="text">
   <button>입력</button>
-  <button class="btn">버튼2</button>
-  <button class="btn">버튼3</button>
 <script>
-  const number = parseInt(prompt("몇 명이 참가하나요?"), 10); // 10진법
-  alert(number);
-  const yesOrNo = confirm("맞나요?");
+  const number = Number(prompt("몇 명이 참가하나요?")); 
+  const $button = document.querySelector('button');
+  const $input = document.querySelector('input');
+  const $word = document.querySelector('#word');
+  let word;
+  let newWord;
 
-  // 아이디는 #, 클래스는 .
+  const onClickButton = () => {
+    if (!word) { // 제시어가 비어 있는가?
+      // 비어 있다
+      word = newWord; // 입력한 단어가 제시어가 된다. 데이터를 바꾸고
+      // 화면도 바꿔줘야 함
+      $word.textContent=word;
+    } else {
+      // 비어 있지 않다
+    }
+  };
+  const onInput = (event) => {
+    newWord = event.target.value;
+  }; 
 
-  // function() : 익명 함수
-  // = funtion() {} 와 () => {} 거의 같다(아직은 차이점 몰라도 됨)
-  document.querySelector('input').addEventListener('input', (event) => {
-    console.log('글자입력', event.target.value);
-  });
+  $button.addEventListener('click', onClickButton);
+  $input.addEventListener('input', onInput);
 
-  // 여러 번 사용될 때는 아래처럼 변수로 빼줘야 하지만, 일회성일 경우 위처럼 익명함수를 이용해도 된다.
-  const onClick = function() {
-    console.log('버튼클릭');
-  }
-  document.querySelector('button').addEventListener('click', onClick); // onClick() 실수많이하니 주의!
-  
 </script>
 </body>
 </html>
