--- a/word-relay.html
+++ b/word-relay.html
@@ -12,7 +12,7 @@
     <input type="text" />
     <button>입력</button>
     <script>
-      const number = Number(prompt("몇 명이 참가하나요?"));
+      const number = parseInt(prompt("몇 명이 참가하나요?"));
       const $button = document.querySelector("button");
       const $input = document.querySelector("input");
       const $word = document.querySelector("#word"); // word는 id니까
@@ -21,13 +21,13 @@
       let newWord; // 새로 입력한 단어
 
       const onClickButton = () => {
-        if (!word) {
+        if (!word || word[word.length - 1] == newWord[0]) {
           // 제시어가 비어 있는가?
           // 비어 있다
           word = newWord; // 입력한 단어가 제시어가 된다. 데이터를 바꾸고
           // 화면도 바꿔줘야 함
           $word.textContent = word;
-          const order = Number($order.textContent); // order 숫자로 변환, 현재 순서
+          const order = parseInt($order.textContent); // order 숫자로 변환, 현재 순서
           if (order + 1 > number) {
             // 현재 순서에서 1을 더한 값이 number보다 크다면
             $order.textContent = 1; // 다음 순서를 1로
@@ -35,26 +35,12 @@
             // 그렇지 않다면
             $order.textContent = order + 1; // 다음 순서를 현재 순서 + 1로
           }
-          $input.value = ""; // 입력칸 다시 공백으로
-          $input.focus();
         } else {
-          // 비어 있지 않다
-          if (word[word.length - 1] == newWord[0]) {
-            // 올바른가? -- 제시어의 마지막 글자와 새로 입력한 단어의 첫 번째 글자가 일치
-            word = newWord;
-            $word.textContent = word;
-            if (order + 1 > number) {
-              $order.textContent = 1;
-            } else {
-              $order.textContent = order + 1;
-            }
-            $input.value = "";
-            $input.focus();
-          } else {
-            // 올바르지 않은가
-            alert("올바르지 않은 단어입니다!");
-          }
+          // 올바르지 않은가
+          alert("올바르지   않은 단어입니다!");
         }
+        $input.value = "";
+        $input.focus();
       };
       const onInput = (event) => {
         newWord = event.target.value;
