--- a/word-relay.html
+++ b/word-relay.html
@@ -37,10 +37,10 @@
           }
         } else {
           // 올바르지 않은가
-          alert("올바르지   않은 단어입니다!");
+          alert("올바르지 않은 단어입니다!");
         }
         $input.value = "";
-        $input.focus();
+        $input.focus(); // 입력창 하이라이트
       };
       const onInput = (event) => {
         newWord = event.target.value;
