if문 중첩 줄이기, 오류 수정

--- a/calculator.html
+++ b/calculator.html
@@ -7,35 +7,33 @@
     <link href="css/calculator.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <body>
-      <input readonly id="operator" />
-      <!-- 사용자들이 글자를 쓸 수 없게 막아둠-->
-      <input readonly type="number" id="result" />
-      <div class="row">
-        <button id="num-7">7</button>
-        <button id="num-8">8</button>
-        <button id="num-9">9</button>
-        <button id="plus">+</button>
-      </div>
-      <div class="row">
-        <button id="num-4">4</button>
-        <button id="num-5">5</button>
-        <button id="num-6">6</button>
-        <button id="minus">-</button>
-      </div>
-      <div class="row">
-        <button id="num-1">1</button>
-        <button id="num-2">2</button>
-        <button id="num-3">3</button>
-        <button id="divide">/</button>
-      </div>
-      <div class="row">
-        <button id="clear">C</button>
-        <button id="num-0">0</button>
-        <button id="calculate">=</button>
-        <button id="multiple">x</button>
-      </div>
-    </body>
+    <input readonly id="operator" />
+    <!-- 사용자들이 글자를 쓸 수 없게 막아둠-->
+    <input readonly type="number" id="result" />
+    <div class="row">
+      <button id="num-7">7</button>
+      <button id="num-8">8</button>
+      <button id="num-9">9</button>
+      <button id="plus">+</button>
+    </div>
+    <div class="row">
+      <button id="num-4">4</button>
+      <button id="num-5">5</button>
+      <button id="num-6">6</button>
+      <button id="minus">-</button>
+    </div>
+    <div class="row">
+      <button id="num-1">1</button>
+      <button id="num-2">2</button>
+      <button id="num-3">3</button>
+      <button id="divide">/</button>
+    </div>
+    <div class="row">
+      <button id="clear">C</button>
+      <button id="num-0">0</button>
+      <button id="calculate">=</button>
+      <button id="multiply">x</button>
+    </div>
     <script src="script/calculator.js"></script>
   </body>
 </html>
